@@ -4,8 +4,8 @@ Title: R Wrapper for the 'Bit.ly' and 'Is.gd'/'v.gd' URL Shortening
         Services
 Description: Allows using two URL shortening services, which also provide
     expanding and analytic functions. Specifically developed for 'Bit.ly' (which requires OAuth 2.0) and 'is.gd' (no API key).
-Version: 1.5.8
-Date: 2022-08-20
+Version: 1.6.0
+Date: 2025-02-16
 Authors@R: 
    c(
     person("John", "Malc", email = "cincenko@outlook.com", role = c("aut", "cre"),  comment = "@dmpe"),
@@ -13,13 +13,13 @@ Authors@R:
     person("Stephen", "Synchronicity", role = c("ctb"), comment="@yogat3ch"))
 Maintainer: John Malc <cincenko@outlook.com>
 Encoding: UTF-8
-Depends: R (>= 4.0)
+Depends: R (>= 4.1)
 Imports: httr (>= 1.4.7), jsonlite (>= 1.8.9), stringr (>= 1.5.1),
-        lubridate (>= 1.9.4), assertthat (>= 0.2.1), shiny (>= 1.7.2),
-        clipr (>= 0.8.0), miniUI (>= 0.1.1.1), cli (>= 3.3.0)
-Suggests: roxygen2 (>= 7.2.1), knitr (>= 1.39), testthat (>= 3.1.4),
-        rmarkdown (>= 2.14), httpuv (>= 1.6.5), stringi (>= 1.7.8),
-        covr (>= 3.5.1), lintr (>= 3.0.0)
+        lubridate (>= 1.9.4), assertthat (>= 0.2.1), shiny (>= 1.10.0),
+        clipr (>= 0.8.0), miniUI (>= 0.1.1.1), cli (>= 3.6.4)
+Suggests: roxygen2 (>= 7.3.2), knitr (>= 1.49), testthat (>= 3.2.3),
+        rmarkdown (>= 2.29), httpuv (>= 1.6.15), stringi (>= 1.8.4),
+        covr (>= 3.5.1), lintr (>= 3.2.0)
 VignetteBuilder: knitr
 License: Apache License 2.0
 URL: https://github.com/dmpe/urlshorteneR
